c2prj1_cards/grade.txt
Grading at Sat Aug  1 16:08:10 UTC 2020
Compiling cards.c
cards.c:198:1: error: "/*" within comment [-Werror=comment]
 /*
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
